--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Cartridge";
+  src: url("/fonts/Cartridge-Regular.woff2");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
